--- a/Aplikasiku/app/src/main/res/layout/activity_welcome.xml
+++ b/Aplikasiku/app/src/main/res/layout/activity_welcome.xml
@@ -62,7 +62,9 @@
 		android:layout_height="wrap_content"
 		android:text="Login"
 		android:textSize="18sp"
-		android:fontFamily="@font/montserrat_light" />
+		android:fontFamily="@font/montserrat_light"
+		android:onClick="clickLogin" />
+
 
 
 
