--- a/Aplikasiku/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Aplikasiku/app/src/main/res/layout/activity_forgot_password.xml
@@ -68,6 +68,7 @@
 		app:layout_constraintTop_toBottomOf="@id/edt_reset_code"
 		android:layout_marginTop="32dp"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent" />
+		app:layout_constraintStart_toStartOf="parent"
+		android:onClick="postSentRequest"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
