--- a/Aplikasiku/app/src/main/res/layout/activity_login.xml
+++ b/Aplikasiku/app/src/main/res/layout/activity_login.xml
@@ -91,7 +91,8 @@
 		android:textColor="#313131"
 		android:textSize="18sp"
 		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/edt_new_password" />
+		app:layout_constraintTop_toBottomOf="@id/edt_new_password"
+		android:onClick="clickForgot"/>
 
 	<Button
 		android:layout_width="match_parent"
@@ -106,7 +107,8 @@
 		app:layout_constraintTop_toBottomOf="@id/forgot_password"
 		android:layout_marginTop="80dp"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent" />
+		app:layout_constraintStart_toStartOf="parent"
+		android:onClick="postLogin"/>
 
 
 
