--- a/ConstraintLayout/app/src/main/res/layout/activity_main.xml
+++ b/ConstraintLayout/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,61 @@
 	android:layout_height="match_parent"
 	tools:context=".MainActivity">
 
-	<TextView
-		android:layout_width="wrap_content"
+	<LinearLayout
+		android:id="@+id/linearLayout5"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:background="#72A934"
+		app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		android:orientation="vertical"></LinearLayout>
+
+	<LinearLayout
+		android:id="@+id/linearLayout6"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:background="#FFFFFF"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
+		android:orientation="vertical">
+
+	</LinearLayout>
+	<Button
+		android:id="@+id/button"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:text="Hello World!"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintLeft_toLeftOf="parent"
+		android:text="Top" />
+
+	<Button
+		android:id="@+id/button2"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintLeft_toLeftOf="parent"
+		android:text="Buttom" />
+
+	<Button
+		android:id="@+id/button3"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/button"
+		app:layout_constraintTop_toBottomOf="@id/button"
+		app:layout_constraintLeft_toLeftOf="parent"
+		android:text="Left Below Top" />
+
+	<Button
+		android:id="@+id/button4"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_above="@id/button2"
+		app:layout_constraintBottom_toTopOf="@id/button2"
 		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+		android:text="Buttom" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
